// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in productCard should display component correctly 1`] = `
<div
  className="productCard undefined "
>
  <h1>
    Product Card
  </h1>
</div>
`;

exports[`Test in productCard should increment the counter 1`] = `
<div
  className="productCard undefined "
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
     +1
  </button>
</div>
`;
